fix bug #46406 (Unregistering nodeclass throws E_FATAL)